# TreeFormer

./: .gitignore  box_ops_2D.py  epoch.py  generate_fast_seg_cache.py  guyot_dataset.py  infer_aux_panel_treeformer.py  infer_panel_treeformer.py  inference_infinity_gradmst.py  inference_infinity_mst_nx_dist.py  inference_infinity_mst_nx_gradmst.py  inference_treeformer.py  justfile  losses_only.py  metric_smd_gpu.py  prune_optuna_checkpoints.py  pyproject.toml  summarize_aux_ablation.py  train_hydra.py  train_mst.py  train_unmst.py  tune_graph_optuna.py  utils.py  valid_smd_guyot_nx.py
.agents/roles/: audit.txt  coordinator.txt  worker.txt
conf/: config.yaml
conf/ablation/: heatmap_center_offset_rank.yaml  heatmap_center_offset_rank_joint_fullres.yaml  heatmap_focal.yaml  heatmap_focal_ridge.yaml  heatmap_focal_ridge_seg_low.yaml  heatmap_mse_baseline.yaml  heatmap_native_stride4.yaml  heatmap_native_stride4_offset.yaml  heatmap_peak_focused.yaml  heatmap_sigma1_5_mse.yaml
conf/augmentation/: disabled.yaml  geometry_mild.yaml  photometric_opencv.yaml  regularized_albumentationsx.yaml
conf/checkpoint/: default.yaml
conf/data/: guyot_full.yaml  guyot_smoke.yaml
conf/distributed/: ddp.yaml  single.yaml
conf/ema/: default.yaml  disabled.yaml
conf/logging/: disabled.yaml  tensorboard.yaml
conf/model/: treeformer_2d.yaml
conf/optimizer/: adamw_step.yaml  muon_schedulefree.yaml  schedulefree_adamw.yaml
conf/train/: aux_supervised.yaml  default.yaml  dry_run.yaml  seg_heatmap.yaml  (+5 more)
configs/: tree_2D_guyot_dry_run.yaml  tree_2D_guyot_full_train.yaml  tree_2D_guyot_test.yaml  tree_2D_guyot_train_smoke.yaml
data/: README.md  dataset_investigation_ja.md
docs/: HYDRA_TRAINING.md  ONBOARDING.md  TreeFormer_virtual_root_forest_formalization.tex
models/: __init__.py  deformable_detr_backbone.py  matcher.py  position_encoding_2D.py  relationformer_2D.py  utils.py
temp/: 00_README.md  01_architecture_overview.md  02_tree_constraint_implementation.md  03_loss_functions.md  04_training_strategy.md  05_evaluation_metrics.md  GPU_HANDOVER_nov14_2025.md  ONBOARDING_nov14_2025.md  PARALLEL_TASKS_nov14_2025_training_verification.md  TASK_MAPPING_nov14_2025.md  TRAINING_VERIFICATION_REPORT_CPU_nov14_2025.md  TreeFormer_ Single-view Plant Skeleton Estimation via Tree-constrained Graph Generation.md  WORK_PLAN_missing_inference_files.md  WORK_PLAN_nov14_2025_missing_inference_files.md  WORK_PLAN_nov14_2025_training_verification.md  algorithm_mapping_and_testing_guide.md  data_preprocessing.md  data_preprocessing_ja.md  dataset_investigation.md  handover_Jul09-2026_pr2_review_intake.md  issue_2_investigation_ja.md  issue_2_missing_files_detailed_investigation.md  workdoc_Jul08-2026_treeformer_guyot_pipeline.md
tests/: conftest.py  test_aux_training.py  test_ema_checkpoint_tensorboard.py  test_epoch_virtual_root.py  test_fast_seg_dataset.py  test_graph_augmentations.py  test_guyot_dataset.py  test_hydra_config.py  test_infer_aux_panel_treeformer.py  test_infer_panel_treeformer.py  test_inference_treeformer.py  test_joint_training.py  test_justfile_recipes.py  test_legacy_treeformer_dataset.py  test_metric_smd_gpu.py  test_nested_tensor_utils.py  test_optimizer_factory.py  test_prune_optuna_checkpoints.py  test_tune_graph_optuna.py  test_virtual_root_loss.py  test_virtual_root_metrics.py  test_virtual_root_model.py
tools/: resize_guyot_dataset.py  sample_guyot_dataset.py  visualize_guyot_annotations.py
treeformer_train/: __init__.py  aux_map_targets.py  aux_training.py  checkpoint.py  config.py  detail_targets.py  ema.py  fast_seg_dataset.py  heatmap_offsets.py  joint_training.py  optimizers.py  runtime.py  tensorboard.py  virtual_root.py
(+407 files in other folders)
