[project]
name = "treeformer"
version = "0.1.0"
description = "TreeFormer: Single-view Plant Skeleton Estimation via Tree-constrained Graph Generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy<2.0",
    "torch>=1.7.1",
    "torchvision>=0.8.2",
    "scikit-image>=0.18.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "pyyaml>=5.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = []
