[project]
name = "treeformer"
version = "0.1.0"
description = "TreeFormer: single-view plant skeleton estimation with Guyot training pipeline support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
    "opencv-python>=4.8",
    "numpy>=2.0,<3.0",
    "scikit-image>=0.25",
    "networkx>=3.4",
    "matplotlib>=3.10",
    "pyyaml>=6.0",
    "pillow>=12.0",
    "setuptools<81",
    "pyvista>=0.48",
    "monai>=1.5",
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3,<2.4",
    "tensorboard>=2.20",
    "schedulefree>=1.4,<2.0",
    "pytorch-ignite>=0.5,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py310"
